# 20-PersonnelApi_Token_Perms/src/controllers/department.controller.js
@@ -6,6 +6,19 @@ const Department = require("../models/department.model");
 
 module.exports = {
   list: async (req, res) => {
+    /*
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "List Departments"
+        #swagger.description = `
+            You can send query with endpoint for search[], sort[], page and limit.
+            <ul> Examples:
+                <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
+                <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                <li>URL/?<b>page=2&limit=1</b></li>
+            </ul>
+        `
+    */
     const data = await res.getModelList(Department);
 
     res.status(200).send({
@@ -16,6 +29,17 @@ module.exports = {
   },
 
   create: async (req, res) => {
+        /*
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "Create Department"
+         #swagger.parameters['body'] = {
+            in:'body',
+            required: true,
+            schema:{
+                $ref: '#/defitions/Department'
+            }
+        }
+    */
     const data = await Department.create(req.body);
     res.status(201).send({
       error: false,
@@ -24,6 +48,10 @@ module.exports = {
   },
 
   read: async (req, res) => {
+            /*
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "Get single Department"
+    */
     const data = await Department.findOne({ _id: req.params.id });
 
     res.status(200).send({
@@ -40,6 +68,17 @@ module.exports = {
   // upsertedCount: upsert işlemi ile kaç belgenin oluşturulduğunu belirtir.
 
   update: async (req, res) => {
+            /*
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "Update Department"
+         #swagger.parameters['body'] = {
+            in:'body',
+            required: true,
+            schema:{
+                $ref: '#/defitions/Department'
+            }
+        }
+    */
     const data = await Department.updateOne({ _id: req.params.id }, req.body, {
       runValidators: true,
     });
@@ -52,6 +91,10 @@ module.exports = {
   },
 
   delete: async (req, res) => {
+            /*
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "Delete Department"
+    */
     const data = await Department.deleteOne({ _id: req.params.id });
     res.status(data.deletedCount ? 204 : 404).send({
       error: !data.deletedCount,
@@ -60,6 +103,10 @@ module.exports = {
   },
 
   personnels: async (req, res) => {
+           /*
+        #swagger.tags = ["Departments"]
+        #swagger.summary = "Get Personnels of Department"
+    */
     const Personnel = require("../models/personnel.model");
 
     const data = await res.getModelList(
